--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -253,6 +253,11 @@
                         </div>
                     </div>
                 </div>
+                <div class="fa-3x scroll-arrow">
+                    <a class="nav-scroll" href="#algotrader-score">
+                        <i class="fas fa-arrow-circle-down" aria-hidden="true"></i>
+                    </a>
+                </div>
             </header>
             <!-- Analytics section - Algotrader Score-->
             <section id="algotrader-score">
@@ -339,6 +344,11 @@
                         </div>
                     </div>
                 </div>
+                <div class="fa-3x scroll-arrow">
+                    <a class="nav-scroll" href="#market-emotion">
+                        <i class="fas fa-arrow-circle-down" aria-hidden="true"></i>
+                    </a>
+                </div>
             </section>
             <!-- Analytics section - Market Emotion-->
             <section id="market-emotion">
@@ -381,6 +391,11 @@
                         </div>
                     </div>
                 </div>
+                <div class="fa-3x scroll-arrow">
+                    <a class="nav-scroll" href="#profit-maximization">
+                        <i class="fas fa-arrow-circle-down" aria-hidden="true"></i>
+                    </a>
+                </div>
             </section>
             <!-- Timing - Profit maximization -->
             <section id="profit-maximization">
@@ -421,6 +436,11 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="fa-3x scroll-arrow">
+                    <a class="nav-scroll" href="#profit-maximization">
+                        <i class="fas fa-arrow-circle-down" aria-hidden="true"></i>
+                    </a>
                 </div>
             </section>
 
