Advantage entry point - main page

--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -226,7 +226,9 @@
                                         <a class="nav-scroll" href="#profit-maximization">
                                             <li>Profit maximization for Trending market phase</li>
                                         </a>
-                                        <li>Entry point for each position targeted to gain intraday advantage based on 1year back research for each ticker (daily updated)</li>
+                                        <a class="nav-scroll" href="#advantage-entry-point">
+                                            <li>Entry point for each position targeted to gain intraday advantage based on 1year back research for each ticker (daily updated)</li>
+                                        </a>
                                         <li>Profit maximization with a trailing stop</li>
                                         <li>Positions open only during positive market emotional phase</li>
                                         <li>Long held positions eliminated for better use of resources</li>
@@ -434,6 +436,27 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="fa-3x scroll-arrow">
+                    <a class="nav-scroll" href="#advantage-entry-point">
+                        <i class="fas fa-arrow-circle-down" aria-hidden="true"></i>
+                    </a>
+                </div>
+            </section>
+
+            <!-- Timing - Profit maximization -->
+            <section id="advantage-entry-point" style="margin-top: -7%;">
+                <div class="container px-4">
+                    <div class="gx-4">
+                        <div style="width: 48%" class="animated lightSpeedIn">
+                            <div class="section-title font-weight-bold">
+                                <h2>Advantage entry point (daily)</h2>
+                            </div>
+                        </div>
+                        <div style="position: relative; top: 3%;">
+                           <img class="algo-score-img" src="{{ url_for('static', filename='images/main/advantage_entry_point.png') }}" style="width: 80%;">
                         </div>
                     </div>
                 </div>
