scroll text shadow - main page

--- a/app/static/styles/mainpage.css
+++ b/app/static/styles/mainpage.css
@@ -109,3 +109,11 @@
     .container {
         max-width: 1500px !important;
 }
+
+.scroll-item:hover{
+    color: #0d3967;
+    text-shadow: #cad5e2 1px 1px 0, #cad5e2 2px 2px 0,
+                 #cad5e2 3px 3px 0, #cad5e2 4px 4px 0,
+                 #cad5e2 5px 5px 0;
+    color: #040000;
+}
