--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -197,14 +197,14 @@
                                 <h5 class="card-title">Analytics</h5>
                                 <div class="pt-4">
                                     <a class="nav-scroll" href="#algotrader-score">
-                                        <ul>
+                                        <ul class="scroll-item">
                                             <li>AI driven Stock analytics</li>
                                             <li>Daily updated</li>
                                             <li>Enriched by 3d party data</li>
                                         </ul>
                                     </a>
                                     <a class="nav-scroll" href="#market-emotion">
-                                        <ul>
+                                        <ul class="scroll-item">
                                             <li>AI driven Market analytics</li>
                                             <li>Hourly updated</li>
                                             <li>Measured by 7 parameters</li>
@@ -224,10 +224,10 @@
                                 <div class="pt-4">
                                     <ul>
                                         <a class="nav-scroll" href="#profit-maximization">
-                                            <li>Profit maximization for Trending market phase</li>
+                                            <li class="scroll-item">Profit maximization for Trending market phase</li>
                                         </a>
                                         <a class="nav-scroll" href="#advantage-entry-point">
-                                            <li>Entry point for each position targeted to gain intraday advantage based on 1year back research for each ticker (daily updated)</li>
+                                            <li class="scroll-item">Entry point for each position targeted to gain intraday advantage based on 1year back research for each ticker (daily updated)</li>
                                         </a>
                                         <li>Profit maximization with a trailing stop</li>
                                         <li>Positions open only during positive market emotional phase</li>
