--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -259,7 +259,7 @@
                                     <a class="nav-scroll" href="#personal-performance">
                                         <li class="scroll-item">Performance research for adjustment</li>
                                     </a>
-                                    <a class="nav-scroll" href="#candidates">
+                                    <a class="nav-scroll" href="#custom-filters">
                                         <li class="scroll-item">Filters to adjust a personal risk level per user</li>
                                     </a>
                                 </ul>
@@ -577,7 +577,6 @@
                     </a>
                 </div>
             </section>
-
             <!-- Management - Personal Performance-->
             <section id="personal-performance">
                 <div class="container px-4" style="padding-top: 8%;">
@@ -597,7 +596,92 @@
                     </div>
                 </div>
                 <div class="fa-3x scroll-arrow">
-                    <a class="nav-scroll" href="#personal-performance">
+                    <a class="nav-scroll" href="#custom-filters">
+                        <i class="fas fa-arrow-circle-down" aria-hidden="true"></i>
+                    </a>
+                </div>
+            </section>
+
+            <!-- Management - Custom Filters-->
+            <section id="custom-filters">
+                <div class="container" style="display: inherit;">
+                    <div class="section-title" style="padding-top: 0; margin-bottom: 5%; text-align: inherit; padding-left: 8%;">
+                        <h2>Custom filters</h2>
+                    </div>
+                    <div class="">
+                        <div class="row">
+                            <div class="col-md-4 col-xl-4">
+                                <div class="mb-3 pt-4 card custom-card">
+                                    <div class="swatch-holder swatch-holder-lg bg-primary" id="TooltipC-3" style="left: 40%;">
+                                        <i class="fas fa-balance-scale-left text-white"></i>
+                                    </div>
+                                    <div class="custom-body">
+                                        <h5 class="card-title">Algotrader Score</h5>
+                                        <div class="custom-body-content">
+                                            Algotrader AI based score for the ticker
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-xl-4">
+                                <div class="mb-3 pt-4 card custom-card">
+                                    <div style="left: 40%; top: -29%;" class="swatch-holder swatch-holder-lg bg-primary" id="TooltipC-4">
+                                        <i class="fas fa-angle-double-down text-white"></i>
+                                    </div>
+                                    <div class="custom-body">
+                                        <h5 class="card-title">Max intraday drop</h5>
+                                        <div class="custom-body-content">
+                                            Maximal intraday drop in tickers history. Can show a tickers volatility.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-xl-4">
+                                <div class="mb-3 pt-4 card custom-card">
+                                    <div style="left: 40%; top: -26%;" class="swatch-holder swatch-holder-lg bg-primary" id="TooltipC-5">
+                                        <i class="fas fa-bold text-white"></i>
+                                    </div>
+                                    <div class="custom-body">
+                                        <h5 class="card-title">Beta</h5>
+                                        <div class="custom-body-content">
+                                            Tickers behavior comparing to overall sectors performance
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row" style="margin-top: 3%;">
+                            <div class="col-md-6 col-xl-6">
+                                <div class="mb-3 pt-4 card custom-card">
+                                    <div style="left: 42%; top: -25%;" class="swatch-holder swatch-holder-lg bg-primary" id="TooltipC-6">
+                                        <i class="fas fa-bacon text-white"></i>
+                                    </div>
+                                    <div class="custom-body">
+                                        <h5 class="card-title">Minimal momentum</h5>
+                                        <div class="custom-body-content">
+                                            General performance of a company during a last year, does it have a positive trend and how strong is it.
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-xl-6">
+                                <div class="mb-3 pt-4 card custom-card">
+                                    <div style="left: 41%; top: -25%;" class="swatch-holder swatch-holder-lg bg-primary" id="TooltipC-7">
+                                        <i class="fas fa-compress-alt text-white"></i>
+                                    </div>
+                                    <div class="custom-body">
+                                        <h5 class="card-title">Underprice level</h5>
+                                        <div class="custom-body-content">
+                                            Current price is below an estimated actual stock price (by analytics consensus)
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="fa-3x scroll-arrow">
+                    <a class="nav-scroll" href="#market-emotion">
                         <i class="fas fa-arrow-circle-down" aria-hidden="true"></i>
                     </a>
                 </div>
